--- a/thetradingchamp.abeatuer2019.com/style.css
+++ b/thetradingchamp.abeatuer2019.com/style.css
@@ -16,6 +16,7 @@ ul#menu-2-6ee5443 li a {
   font-family: Muli;
   font-size: 15px;
   line-height: 30px;
+  background-color: transparent;
 }
 
 .text_li ul {
