--- a/thetradingchamp.abeatuer2019.com/style.scss
+++ b/thetradingchamp.abeatuer2019.com/style.scss
@@ -13,6 +13,7 @@ ul#menu-2-6ee5443{
             font-family: Muli;
             font-size: 15px;
             line-height: 30px;
+            background-color: transparent;
         }
     }
 }
