--- a/alivebots.com/product4.scss
+++ b/alivebots.com/product4.scss
@@ -44,6 +44,7 @@ form.cart{
 }
 .quantity input{
     height: 40px !important;
+    width: 180px !important;
 }
 
 .woocommerce-variation-add-to-cart{
