--- a/lucktora.com/112.css
+++ b/lucktora.com/112.css
@@ -130,3 +130,24 @@
   aspect-ratio: 1 / 1;
   order: 1;
 }
+
+.woocommerce.single-product .elementor-widget-woocommerce-product-add-to-cart .elementor-add-to-cart .stock.in-stock {
+  display: none;
+}
+
+.woocommerce.single-product .elementor-widget-woocommerce-product-add-to-cart .elementor-add-to-cart button.shopengine_add_to_list_action {
+  display: none !important;
+}
+
+.woocommerce.single-product .elementor-widget-woocommerce-product-add-to-cart .elementor-add-to-cart .quantity.buttons_added > input {
+  margin-top: 0 !important;
+}
+
+.woocommerce.single-product .elementor-widget-woocommerce-product-add-to-cart .elementor-add-to-cart button[type="submit"].single_add_to_cart_button {
+  margin: 0;
+  height: auto !important;
+}
+
+.woocommerce.single-product .elementor-widget-woocommerce-product-add-to-cart .elementor-add-to-cart #buy_now_button {
+  width: 239px !important;
+}
