--- a/beibeixstyle.com.3.css
+++ b/beibeixstyle.com.3.css
@@ -98,4 +98,7 @@
   .nf-form-cont {
     margin-top: 30px;
   }
+  .nf-form-cont .nf-field-container:not(#nf-field-4-container) {
+    margin-bottom: 15px;
+  }
 }
